@@ -35,7 +35,7 @@
 	  sawfish.wm.edge.flip
 	  sawfish.wm.edge.hot-spots
 	  sawfish.wm.edge.maximize
-	  sawfish.wm.edge.tile
+	  sawfish.wm.edge.expose
 	  sawfish.wm.edge.viewport-drag)
 
   (define-structure-alias edge-actions sawfish.wm.edge.actions)
@@ -51,8 +51,8 @@
        (edge-flip-invoke edge func while-moving))
       ((flip-viewport)
        (edge-flip-invoke edge func while-moving))
-      ((tile-windows)
-       (tile-windows-core edge while-moving))
+      ((expose-windows)
+       (expose-windows-core edge while-moving))
       ((expand-window)
        (expand-action edge))
       ((maximize-window)
