@@ -1,3 +1,11 @@
+2011-10-04  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/edge/conf.jl
+	* lisp/sawfish/wm/edge/actions.jl
+	* lisp/sawfish/wm/edge/expose.jl
+	* lisp/sawfish/wm/edge/tile.jl
+	* lisp/sawfish/wm/ext/match-window.jl: renamed tile EdgeAction to
+	expose
+
 2011-08-18  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/util.jl: added move-window-to-corner and
 	move-window-to-edge helpers
